<resources>
    <string name="app_name">I AM Fit</string>
    <string name="tab_text_1">Activity</string>
    <string name="tab_text_2">Sleep</string>
    <string name="tab_text_3">HR</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>

    <string name="title_home">Home</string>
    <string name="title_user">User</string>
    <string name="title_details">Details</string>
    <string name="title_device">Device</string>
    <!-- Basic History -->

    <!--<string name="intro_text">Behold, a data dump from the Fitness API! Check the menu for more actions!</string>-->
    <string name="action_update_session">Update step count data</string>
    <!--<string name="action_delete_session">Delete step count data</string>-->
    <!--<string name="action_settings">Settings</string>-->

    <!-- Basic Sessions -->

    <string name="action_delete_session">Delete session</string>
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="permission_rationale">Location data is used as part of the Google Fit API</string>-->
    <!--<string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>-->
    <!--<string name="settings">Settings</string>-->
    <!--<string name="ok">OK</string>-->

    <!-- Basic Recording -->

    <!--<string name="intro_text">Hi! Let\'s subscribe to some available data sources! Use the menu to explore additional actions!</string>-->
    <!--<string name="action_dump_subs">List Active Subscriptions</string>-->
    <!--<string name="action_cancel_subs">Cancel subscriptions</string>-->
    <!--<string name="action_settings">Settings</string>-->

    <!--Basic Sensors -->

    <!--<string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>-->
    <!--<string name="action_unregister_listener">Unregister listener</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="permission_rationale">Location data is used as part of the Google Fit API</string>-->
    <!--<string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>-->
    <!--<string name="settings">Settings</string>-->
    <!--<string name="ok">OK</string>-->

    <!-- Step Counter -->

    <!--<string name="intro_text">Hi! Let\'s track daily cumulative steps. Use the menu to explore additional actions.</string>-->
    <string name="action_dump_subs">List Active Subscriptions</string>
    <string name="action_cancel_subs">Cancel subscriptions</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="action_read_step_data">Read step data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
    <string name="action_unregister_listener">Unregister listener</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
</resources>
