<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_delete_session"
        android:title="@string/action_delete_session"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_dump_subs"
        android:title="@string/action_dump_subs"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_cancel_subs"
        android:title="@string/action_cancel_subs"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_unregister_listener"
        android:title="@string/action_unregister_listener"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_read_data"
        android:title="@string/action_read_step_data"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>